# WL_2_CAR3_test_display

test_spk/: README.md  build.sh  deploy.sh  test_spk.qml
test_spk/docs/: BUILD_FILES.md  README_ARCHITECTURE.md  README_BUILD_ELSEWHERE.md  README_PWM.md  README_SCP_WSL.md  README_TRIGGER.md  README_WSL_BUILD.md  README_YOCTO_FULLSCREEN.md  USAGE_FROM_OTHER_PROGRAMS.md  trigger_send.md
test_spk/host/: CMakeLists.txt  Makefile  Makefile.gcc  TriggerServer.cpp  TriggerServer.h  build.sh  main.cpp  moc_TriggerServer.cpp  test_spk_host.pro
test_spk/key_trigger/: Makefile  build.sh  key_trigger  trigger.c  trigger_send.c  trigger_send.h
test_spk/output/: test_spk_host
test_spk/scripts/: list_specs.sh
test_spk/sound_trigger/: Makefile  build.sh  sound_trigger  sound_trigger.c
